language and icons added, and update function

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,16 +1,35 @@
 {
-    "title": "My Portfolio",
-    "back": "Back",
-    "add": "+ Add",
-    "currency": "Currency",
-    "amount": "Amount",
-    "price": "Buy Price (€)",
-    "time": "Purchase Time",
-    "actions": "Actions",
-    "delete": "Delete",
+    "title": "Mein Portfolio",
+    "back": "Zurück",
+    "add": "+ Hinzufügen",
+    "currency": "Währung",
+    "amount": "Menge",
+    "price": "Kaufpreis (€)",
+    "time": "Kaufzeitpunkt",
+    "actions": "Aktionen",
+    "delete": "Löschen",
     "details": "Details",
-    "total": "Total Portfolio Value",
-    "noEntries": "No entries.",
-    "loading": "Loading..."
+    "total": "Gesamtwert des Portfolios",
+    "noEntries": "Keine Einträge.",
+    "loading": "Wird geladen...",
+    "cryptoTrackr": "Crypto Trackr",
+    "viewPortfolio": "Portfolio anzeigen",
+    "search": "Suchen",
+    "reset": "Zurücksetzen",
+    "coin": "Münze",
+    "date": "Datum",
+    "last24h": "Letzte 24 Std.",
+    "lastWeek": "Letzte Woche",
+    "priceEuro": "Preis (€)",
+    "hideHistory": "Verlauf ausblenden",
+    "loadHistory": "Verlauf laden",
+    "failedToLoad": "Daten konnten nicht geladen werden. Bitte versuche es erneut.",
+    "edit": "Bearbeiten",
+    "editing": "Bearbeite",
+    "update": "Aktualisieren",
+    "priceHistory": "Preisentwicklung",
+    "from": "Von",
+    "to": "Bis",
+    "close": "Schließen"
   }
   
